# GenericParallelDynamicProgramming

./: .gitignore  LICENSE  README.md  requirements.txt
python/: runner.py
src/: CMakeLists.txt
src/problem/: CMakeLists.txt  constraints.cu  constraints.cuh  cost.cu  cost.cuh  problem.cu  problem.cuh  state_dynamics.cu  state_dynamics.cuh
src/solver/: CMakeLists.txt  parallelDP.cu  parallelDP.cuh  serialDP.cu  serialDP.cuh
